--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
-    "validator": "^13.11.0"
+    "validator": "^13.11.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.1.6",
